# OMERO_scripts

./: README.md
R/: Rexample_use_Python_API.R  Rexample_use_Python_API.Rmd
download/: omero_zarr_export.py
incucyte/: IncucyteOMEGenerator.py  Incucyte_to_zarr.py  Incucyte_to_zarr0_5.py  README.md  pixi.toml
python/: README.md  README_GUI.md  convert_nd2_screen_to_stacks.py  convert_nd2_screen_to_stacks>py  convert_nd2_screen_to_stacks_gui.py  launch_gui.bat  launch_gui.sh  pixi.toml
python/nd2_converter/: INSTALL.md  README.md  launch_gui.bat  launch_gui.sh  pyproject.toml
python/nd2_converter/nd2_converter/: __init__.py  __main__.py  converter.py  gui.py
python/transfer/: pixi.toml
transfer/: README.md  omero_download_plate.sh
